--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
              <div id="record"></div>
              
              <div class="total">
-             <input class="green" id="totalin" style="width: 230px;" type="display" value="TOTAL EARNING: 0" disabled>
+             <input class="green" id="totalin" style="width: 230px; margin-top: 45px;" type="display" value="TOTAL EARNING: 0" disabled>
              <input class="green" id="netin" style="width: 230px;" type="display" value="NET INCOME: 0" disabled>
              <p id="income_alert" style="font-weight: bold; color: red;">Your expenses is <span class="loss"></span> more than income!</p>
              </div>
@@ -217,7 +217,7 @@
              <div id="secrecord"></div>
              
              <div class="total">
-             <input class="red" id="totale" style="width: 230px;" type="display" value="TOTAL SPENDING: 0" disabled>
+             <input class="red" id="totale" style="width: 230px; margin-top:45px;" type="display" value="TOTAL SPENDING: 0" disabled>
              <input class="red" id="totex" style="width: 230px;" type="display" value="NET EXPENSES: 0" disabled>
              <p id="expense_alert" style="font-weight: bold; color: green;">Doing great. You are <span class="wealth"></span> wealthier!</p>             
              </div>
