--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p id="calnav" class="menunav">CALCULATOR</p>
             <p id="netnav" class="menunav">NET INCOME</p>
              <p id="netexnav" class="menunav">NET EXPENSE</p>
-             <p class="menunav"><a href="https://htmlpreview.github.io/?https://github.com/Alivexem/Notepad/blob/main/index.html#greeting">BUSINESS NOTE</a></p>
+             <p class="menunav"><a href="https://htmlpreview.github.io/?https://github.com/Alivexem/Notepad/blob/main/index.html">BUSINESS NOTE</a></p>
             <p style="padding-left: 15px; color: orange;" id="refnav" class="menunav">REFRESH</p>
         </div>
         <div class="background"></div>
