--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="background1"></div>
 
         <div class="content">
-        <p style=" font-weight: bold; padding: 0 5px 0 5px; margin-top: 35px; text-align: center;">Ever wondered how to keep the habit of overspending on check? That's right! it is now possible through Coinwise, all you need to do is input and save your income and spending.</p>
+        <p style=" padding: 0 5px 0 5px; margin-top: 35px; text-align: center;">Ever wondered how to keep the habit of overspending on check? That's right! it is now possible through Coinwise, all you need to do is input and save your income and spending.</p>
 
-        <p style="margin-bottom: 55px; font-weight: bold; padding: 0 5px 0 5px; margin-top: 35px; text-align: center;">Coinwise automatically calculates your income total, expense total, net income and net expense, displaying targeted warnings to keep your spending habit in check... Happy Financing!</p>
+        <p style="margin-bottom: 55px; padding: 0 5px 0 5px; margin-top: 35px; text-align: center;">Coinwise automatically calculates your income total, expense total, net income and net expense, displaying targeted warnings to keep your spending habit in check... Happy Financing!</p>
         </div>
         <hr>
         <p style="text-align:right; padding-right: 20px;">NET INCOME: <span id="idisplay" style="font-weight:bold;">0</span></p>
